# SpaceTrains

./: .gitattributes  .gitignore  BUGFIX.md  CMakeLists.txt  README.md  project.godot  run
Assets/Materials/: Dark Blue.mat  Dark.mat
Assets/Resources/: OrbitPrefab.prefab  ShipPrefab.prefab
Assets/Scenes/: SolarSys.unity
Assets/Scripts/: Autopilot.cs  Engines.cs  GameEvents.cs  Orbit.cs  Planet.cs  PlanetController.cs  Player.cs  Ship.cs
ProjectSettings/: ProjectSettings.asset
Python/: VASIMROptimizer.py
VariableISP/: KeplerVariableISPRockets.tex  build_reference_sets.py  click_trajectory_viewer.py  export_runtime_atlas.py  generate_atlas.py  reconstruct_atlas_trajectory.py  rocketHamilton.py
data/bodies/: bodies.csv
data/commodities/: commodities.csv
data/factions/: factions.csv
data/recipes/: recipes.csv
data/ship_classes/: ship_classes.csv
data/ships/: ships.csv
data/stations/: stations.csv
docs/: IMPLEMENTATION_NOTES.md  TRAJECTORY_SYSTEM_PLAN.md  architecture_overview.md  game_design.md  roadmap.md
docs/modules/: bridge.md  celestial.md  data_loader.md  economy.md  simulation.md  trajectory.md  ui_observer.md
docs/plans/: kepler_trajectory_rendering.md
godot/: project.godot
godot/data/: bodies.csv  stations.csv
godot/scenes/: Main.tscn
godot/scripts/: Main.gd  OrbitCamera.gd
scenes/: Main.gd  Main.tscn
sim/: EventBus.gd  Simulation.gd  WorldState.gd
sim/systems/: MissionSystem.gd  OrbitSystem.gd  ShipMovementSystem.gd  StationEconomySystem.gd
sim/trajectory/: KeplerianTrajectory.gd  LinearTrajectory.gd  Trajectory.gd  TrajectoryPlanner.gd
src/app/: main.cpp
tests/: test_main.cpp  variable_isp_test.cpp
ui/: EventLog.gd  HelpOverlay.gd  SelectionPanel.gd  TimeControls.gd
view/: FloatingOrigin.gd  OrbitCamera.gd  SolarSystemRenderer.gd
(+16 files in other folders)
